@@ -401,6 +401,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       cleanup process doesn't kill itself before all other processes in the
       process group are killed.
     - src/pulsemanager.cpp: remove unused variables.
+    - src/unixhelper.cpp: code cleanup.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
